--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<title>Indiexch</title>
 <link rel="alternate" type="application/rss+xml" title="Brconstructioncompany.com &raquo; Feed" href="feed/index.html" />
+"<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WKX8KDS2');</script>
+<!-- End Google Tag Manager -->"
 <link rel="alternate" type="application/rss+xml" title="Brconstructioncompany.com &raquo; Comments Feed" href="comments/feed/index.html" />
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.1.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.1.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/brconstructioncompany.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.8.1"}};
@@ -82,6 +89,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </head>
 
 <body class="home blog wp-embed-responsive wp-theme-twentytwentyfive">
+"<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src=""https://www.googletagmanager.com/ns.html?id=GTM-WKX8KDS2""
+height=""0"" width=""0"" style=""display:none;visibility:hidden""></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->"
 
 <div class="wp-site-blocks"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
